--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.26.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
